--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "good": "^7.0.2",
     "good-squeeze": "^5.0.0",
     "hapi": "^15.1.1",
+    "hapi-auth-basic": "^5.0.0",
     "hapi-info": "^2.0.2",
     "hapi-swagger": "^7.2.0",
     "inert": "^4.0.2",
